@@ -6,6 +6,7 @@ serd (UNRELEASED) unstable; urgency=low
     Unicode replacement character
   * Report reason for failure to open file in serdi
   * Improve write performance by doing bulk writes for unescaped substrings
+  * Add SerdBulkSink for writing bulk output and corresponding serdi -B option
 
  -- David Robillard <d@drobilla.net>  (UNRELEASED)
 
